Fri May  4 11:07:15 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * HAL update:
   - fixed the dstate-hal integration, which caused a huge memory leak
   - prepare for DBus Method calls (wired on NUT instant commands)
   - improve the debian nut-hal-drivers package (see the debian changelog in
     packaging/debian/changelog for more details)
   - m4/nut_check_libhal.m4: improved for future dbus use
   
Tue Apr 24 16:15:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

   - drivers/bcmxcp_ser.c: Update done by Arjen de Korte. Changed some 
     printf lines to upslogx and upsdebugx. Made a cleaner send function.
     Baudhunting give more informative info.
     Also removed a bug in the receive function that i missed.

Fri Apr 13 14:00:45 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * HAL update:
   - docs/nut-hal.txt: various documentation update
   - m4/nut_check_libhal.m4: check the hal user and HAL version (0.5.8
     minimum required)

Fri Apr  6 11:24:45 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - man/megatec_usb.8: reflected latest changes in megatec_usb driver.

Thu Apr  5 00:40:20 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - data/drivers.list: Added entry for Compaq R3000h

Thu Apr  5 00:38:54 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - configure.in: added "--enable-maintainer-mode"

Fri Mar 30 12:45:07 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * update HAL support code:
   - retrieve and use the HAL user,
   - use LibHalChangeSet calls,
   - call libhal_device_addon_is_ready(),
   - do not expose runtime when not on battery (it otherwise cause
     this value to be displayed as the remaining time to full charge!),
   - complete exposed data (battery.{charge_level,reporting}.low,
     battery.reporting.technology)

Tue Mar 27 14:01:50 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - add HAL support for megatec_usb supported devices
