@@ -1,3 +1,8 @@
+Sun May  6 21:06:10 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - data/driver.list: more models supported by megatec
+ - drivers/megatec.c: better handling of UPS replies
+
 Fri May  4 11:07:15 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
 
  * HAL update:
